tests/baselines/reference/asyncUnParenthesizedArrowFunction_es6(strict=true).errors.txt
asyncUnParenthesizedArrowFunction_es6.ts(2,17): error TS7006: Parameter 'i' implicitly has an 'any' type.
asyncUnParenthesizedArrowFunction_es6.ts(3,19): error TS7006: Parameter 'i' implicitly has an 'any' type.


==== asyncUnParenthesizedArrowFunction_es6.ts (2 errors) ====
    declare function someOtherFunction(i: any): Promise<void>;
    const x = async i => await someOtherFunction(i)
                    ~
!!! error TS7006: Parameter 'i' implicitly has an 'any' type.
    const x1 = async (i) => await someOtherFunction(i);
                      ~
!!! error TS7006: Parameter 'i' implicitly has an 'any' type.